# Netiface

./: .gitignore  ARCHITECTURE.md  BUILD.md  IMPLEMENTATION.md  MEDIA_VIEWER_GUIDE.md  MEDIA_VIEWER_IMPLEMENTATION.md  README.md  VISUAL_MOCKUP.md  build.gradle  settings.gradle  verify_build.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  nfs_wrapper.cpp
app/src/main/java/com/netiface/nfsclient/: ConnectionScreen.kt  FileBrowserScreen.kt  FileTypeUtil.kt  ImageVideoViewerScreen.kt  MainActivity.kt  NfsClient.kt  NfsDataSource.kt  NfsFetcher.kt  NfsModels.kt  NfsViewModel.kt
app/src/main/java/com/netiface/nfsclient/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/mipmap-xxxhdpi/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml
